src/PISDLParser/PIParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g 2015-06-11 13:05:49

package PISDLParser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class PIParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "DECL", "BLOCK", "FUNCTION", "PARAMS", "POS", "NEG", "CALL", "ARGS", "CAST", "ARRAY", "INDEX", "OBJECT_CONSTRUCTOR", "OBJ_REF", "OBJ_ASSIG", "ARRAY_ASSIG", "ID", "EQUAL", "SC", "BREAK", "CONTINUE", "WHILE", "LP", "RP", "IF", "ELSE", "RETURN", "PRINT", "PRINTLN", "LBRACE", "RBRACE", "DOT", "LB", "RB", "SET", "COMMA", "XOR", "OR", "AND", "EQUIV", "NOTEQ", "LTHAN", "GTHAN", "LTHANE", "GTHANE", "PLUS", "MINUS", "CONCAT", "MULT", "DIV", "POW", "NOT", "GET", "KVPAIR", "NUMBER", "FPNUMBER", "TRUE", "FALSE", "STRING", "QUOTE", "VAR", "KEY", "OBJECT", "VECTOR", "VOID", "MULTILINE_COMMENT", "COMMENT", "NULL", "US", "BSLASH", "AS", "PRED", "WS", "DIGIT"
    };
    public static final int EOF=-1;
    public static final int PROGRAM=4;
    public static final int DECL=5;
    public static final int BLOCK=6;
    public static final int FUNCTION=7;
    public static final int PARAMS=8;
    public static final int POS=9;
    public static final int NEG=10;
    public static final int CALL=11;
    public static final int ARGS=12;
    public static final int CAST=13;
    public static final int ARRAY=14;
    public static final int INDEX=15;
    public static final int OBJECT_CONSTRUCTOR=16;
    public static final int OBJ_REF=17;
    public static final int OBJ_ASSIG=18;
    public static final int ARRAY_ASSIG=19;
    public static final int ID=20;
    public static final int EQUAL=21;
    public static final int SC=22;
    public static final int BREAK=23;
    public static final int CONTINUE=24;
    public static final int WHILE=25;
    public static final int LP=26;
    public static final int RP=27;
    public static final int IF=28;
    public static final int ELSE=29;
    public static final int RETURN=30;
    public static final int PRINT=31;
    public static final int PRINTLN=32;
    public static final int LBRACE=33;
    public static final int RBRACE=34;
    public static final int DOT=35;
    public static final int LB=36;
    public static final int RB=37;
    public static final int SET=38;
    public static final int COMMA=39;
    public static final int XOR=40;
    public static final int OR=41;
    public static final int AND=42;
    public static final int EQUIV=43;
    public static final int NOTEQ=44;
    public static final int LTHAN=45;
    public static final int GTHAN=46;
    public static final int LTHANE=47;
    public static final int GTHANE=48;
    public static final int PLUS=49;
    public static final int MINUS=50;
    public static final int CONCAT=51;
    public static final int MULT=52;
    public static final int DIV=53;
    public static final int POW=54;
    public static final int NOT=55;
    public static final int GET=56;
    public static final int KVPAIR=57;
    public static final int NUMBER=58;
    public static final int FPNUMBER=59;
    public static final int TRUE=60;
    public static final int FALSE=61;
    public static final int STRING=62;
    public static final int QUOTE=63;
    public static final int VAR=64;
    public static final int KEY=65;
    public static final int OBJECT=66;
    public static final int VECTOR=67;
    public static final int VOID=68;
    public static final int MULTILINE_COMMENT=69;
    public static final int COMMENT=70;
    public static final int NULL=71;
    public static final int US=72;
    public static final int BSLASH=73;
    public static final int AS=74;
    public static final int PRED=75;
    public static final int WS=76;
    public static final int DIGIT=77;

    // delegates
    // delegators


        public PIParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PIParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[91+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PIParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:37:1: program : globals -> ^( PROGRAM globals ) ;
    public final PIParser.program_return program() throws RecognitionException {
        PIParser.program_return retval = new PIParser.program_return();
        retval.start = input.LT(1);
        int program_StartIndex = input.index();
        Object root_0 = null;

        PIParser.globals_return globals1 = null;


        RewriteRuleSubtreeStream stream_globals=new RewriteRuleSubtreeStream(adaptor,"rule globals");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:38:3: ( globals -> ^( PROGRAM globals ) )
            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:38:5: globals
            {
            pushFollow(FOLLOW_globals_in_program153);
            globals1=globals();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_globals.add(globals1.getTree());


            // AST REWRITE
            // elements: globals
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 38:13: -> ^( PROGRAM globals )
            {
                // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:38:16: ^( PROGRAM globals )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                adaptor.addChild(root_1, stream_globals.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class globals_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "globals"
    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:41:1: globals : ( declaration )* ( function )* ;
    public final PIParser.globals_return globals() throws RecognitionException {
        PIParser.globals_return retval = new PIParser.globals_return();
        retval.start = input.LT(1);
        int globals_StartIndex = input.index();
        Object root_0 = null;

        PIParser.declaration_return declaration2 = null;

        PIParser.function_return function3 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:42:3: ( ( declaration )* ( function )* )
            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:42:5: ( declaration )* ( function )*
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:42:5: ( declaration )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ARRAY||(LA1_0>=VAR && LA1_0<=VOID)) ) {
                    int LA1_1 = input.LA(2);

                    if ( (LA1_1==ID) ) {
                        int LA1_3 = input.LA(3);

                        if ( ((LA1_3>=EQUAL && LA1_3<=SC)) ) {
                            alt1=1;
                        }


                    }


                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:0:0: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_globals176);
            	    declaration2=declaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:42:18: ( function )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ARRAY||(LA2_0>=VAR && LA2_0<=VOID)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:0:0: function
            	    {
            	    pushFollow(FOLLOW_function_in_globals179);
            	    function3=function();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, function3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, globals_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "globals"

    public static class declaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaration"
    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:46:1: declaration : type ID ( EQUAL expr )? SC -> ^( DECL type ID ( EQUAL expr )? ) ;
    public final PIParser.declaration_return declaration() throws RecognitionException {
        PIParser.declaration_return retval = new PIParser.declaration_return();
        retval.start = input.LT(1);
        int declaration_StartIndex = input.index();
        Object root_0 = null;

        Token ID5=null;
        Token EQUAL6=null;
        Token SC8=null;
        PIParser.type_return type4 = null;

        PIParser.expr_return expr7 = null;


        Object ID5_tree=null;
        Object EQUAL6_tree=null;
        Object SC8_tree=null;
        RewriteRuleTokenStream stream_SC=new RewriteRuleTokenStream(adaptor,"token SC");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_EQUAL=new RewriteRuleTokenStream(adaptor,"token EQUAL");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:47:3: ( type ID ( EQUAL expr )? SC -> ^( DECL type ID ( EQUAL expr )? ) )
            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:47:5: type ID ( EQUAL expr )? SC
            {
            pushFollow(FOLLOW_type_in_declaration198);
            type4=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type4.getTree());
            ID5=(Token)match(input,ID,FOLLOW_ID_in_declaration200); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID5);

            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:47:13: ( EQUAL expr )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==EQUAL) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:47:14: EQUAL expr
                    {
                    EQUAL6=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_declaration203); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_EQUAL.add(EQUAL6);

                    pushFollow(FOLLOW_expr_in_declaration205);
                    expr7=expr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expr.add(expr7.getTree());

                    }
                    break;

            }

            SC8=(Token)match(input,SC,FOLLOW_SC_in_declaration209); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_SC.add(SC8);



            // AST REWRITE
            // elements: expr, EQUAL, ID, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 47:30: -> ^( DECL type ID ( EQUAL expr )? )
            {
                // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:47:33: ^( DECL type ID ( EQUAL expr )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECL, "DECL"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:47:48: ( EQUAL expr )?
                if ( stream_expr.hasNext()||stream_EQUAL.hasNext() ) {
                    adaptor.addChild(root_1, stream_EQUAL.nextNode());
                    adaptor.addChild(root_1, stream_expr.nextTree());

                }
                stream_expr.reset();
                stream_EQUAL.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, declaration_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "declaration"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:50:1: statement : ( assignment | declaration | printstatement | returnstatement | statcall | ifstatement | whilestatement | BREAK SC | CONTINUE SC );
    public final PIParser.statement_return statement() throws RecognitionException {
        PIParser.statement_return retval = new PIParser.statement_return();
        retval.start = input.LT(1);
        int statement_StartIndex = input.index();
        Object root_0 = null;

        Token BREAK16=null;
        Token SC17=null;
        Token CONTINUE18=null;
        Token SC19=null;
        PIParser.assignment_return assignment9 = null;

        PIParser.declaration_return declaration10 = null;

        PIParser.printstatement_return printstatement11 = null;

        PIParser.returnstatement_return returnstatement12 = null;

        PIParser.statcall_return statcall13 = null;

        PIParser.ifstatement_return ifstatement14 = null;

        PIParser.whilestatement_return whilestatement15 = null;


        Object BREAK16_tree=null;
        Object SC17_tree=null;
        Object CONTINUE18_tree=null;
        Object SC19_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:51:3: ( assignment | declaration | printstatement | returnstatement | statcall | ifstatement | whilestatement | BREAK SC | CONTINUE SC )
            int alt4=9;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:51:5: assignment
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assignment_in_statement241);
                    assignment9=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment9.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:52:5: declaration
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_declaration_in_statement247);
                    declaration10=declaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration10.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:53:5: printstatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_printstatement_in_statement253);
                    printstatement11=printstatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, printstatement11.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:54:5: returnstatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_returnstatement_in_statement259);
                    returnstatement12=returnstatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, returnstatement12.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:55:5: statcall
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_statcall_in_statement265);
                    statcall13=statcall();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, statcall13.getTree());

                    }
                    break;
                case 6 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:56:5: ifstatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ifstatement_in_statement271);
                    ifstatement14=ifstatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ifstatement14.getTree());

                    }
                    break;
                case 7 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:57:5: whilestatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_whilestatement_in_statement277);
                    whilestatement15=whilestatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, whilestatement15.getTree());

                    }
                    break;
                case 8 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:58:5: BREAK SC
                    {
                    root_0 = (Object)adaptor.nil();

                    BREAK16=(Token)match(input,BREAK,FOLLOW_BREAK_in_statement283); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    BREAK16_tree = (Object)adaptor.create(BREAK16);
                    adaptor.addChild(root_0, BREAK16_tree);
                    }
                    SC17=(Token)match(input,SC,FOLLOW_SC_in_statement285); if (state.failed) return retval;

                    }
                    break;
                case 9 :
                    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:59:5: CONTINUE SC
                    {
                    root_0 = (Object)adaptor.nil();

                    CONTINUE18=(Token)match(input,CONTINUE,FOLLOW_CONTINUE_in_statement292); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    CONTINUE18_tree = (Object)adaptor.create(CONTINUE18);
                    adaptor.addChild(root_0, CONTINUE18_tree);
                    }
                    SC19=(Token)match(input,SC,FOLLOW_SC_in_statement294); if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, statement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class whilestatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "whilestatement"
    // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:62:1: whilestatement : WHILE LP expr RP block -> ^( WHILE expr block ) ;
    public final PIParser.whilestatement_return whilestatement() throws RecognitionException {
        PIParser.whilestatement_return retval = new PIParser.whilestatement_return();
        retval.start = input.LT(1);
        int whilestatement_StartIndex = input.index();
        Object root_0 = null;

        Token WHILE20=null;
        Token LP21=null;
        Token RP23=null;
        PIParser.expr_return expr22 = null;

        PIParser.block_return block24 = null;


        Object WHILE20_tree=null;
        Object LP21_tree=null;
        Object RP23_tree=null;
        RewriteRuleTokenStream stream_WHILE=new RewriteRuleTokenStream(adaptor,"token WHILE");
        RewriteRuleTokenStream stream_RP=new RewriteRuleTokenStream(adaptor,"token RP");
        RewriteRuleTokenStream stream_LP=new RewriteRuleTokenStream(adaptor,"token LP");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:63:3: ( WHILE LP expr RP block -> ^( WHILE expr block ) )
            // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:63:5: WHILE LP expr RP block
            {
            WHILE20=(Token)match(input,WHILE,FOLLOW_WHILE_in_whilestatement310); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_WHILE.add(WHILE20);

            LP21=(Token)match(input,LP,FOLLOW_LP_in_whilestatement312); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LP.add(LP21);

            pushFollow(FOLLOW_expr_in_whilestatement314);
            expr22=expr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_expr.add(expr22.getTree());
            RP23=(Token)match(input,RP,FOLLOW_RP_in_whilestatement316); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RP.add(RP23);

            pushFollow(FOLLOW_block_in_whilestatement318);
            block24=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block24.getTree());


            // AST REWRITE
            // elements: WHILE, expr, block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 63:28: -> ^( WHILE expr block )
            {
                // C:\\Users\\Lyle\\workspace\\PIDSL\\src\\PISDLParser\\PI.g:63:31: ^( WHILE expr block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_WHILE.nextNode(), root_1);

                adaptor.addChild(root_1, stream_expr.nextTree());
                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, whilestatement_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "whilestatement"

    public static class ifstatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
